syntax = "proto3";

option go_package = "INF343-Tarea2/proto/emergencia";

package emergencias;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto"; // ← ESTA ES LA LÍNEA QUE FALTABA

message Emergency {
    int64 emergency_id = 1;
    string name = 2;
    double latitude = 3;
    double longitude = 4;
    int32 magnitude = 5;
}

message EmergencyListRequest {
    repeated Emergency emergencies = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message EmergencyListResponse {
    bool success = 1;
    string message = 2;
}

service AsignacionService {
    rpc SendEmergencies(EmergencyListRequest) returns (EmergencyListResponse);
    rpc NotifyEmergencyExtinguished(EmergencyExtinguishedNotification) returns (google.protobuf.Empty);
}

message EmergencyExtinguishedNotification {
    int64 emergency_id = 1;
    string dron_id = 2;
    string final_status = 3;
}

message Empty {}
